--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="F:\My_folder\Code_practice\webdev\myweb\css\style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="btn">
-                    <button><a href="F:\My_folder\Code_practice\webdev\myweb\images\resume.pdf" target="_blank">RESUME</a></button>
+                    <button><a href="resume.pdf" target="_blank">RESUME</a></button>
                     <button><a href="#fourth">CONTACT AT</a></button>
                 </div>
             </div>
@@ -53,7 +53,7 @@
             <div class="first" id="first">
                 <div class="first-left">
                     <h1>ABOUT ME</h1>
-                    <img src="F:\My_folder\Code_practice\webdev\myweb\images\aboutme.svg" height="400px" width="400px">
+                    <img src="aboutme.svg" height="400px" width="400px">
                 </div>
                 <div class="first-right">
                     <p>
@@ -83,7 +83,7 @@
             <div class="second" id="second">
                 <div class="second-left">
                     <h1>WORK</h1>
-                    <img src="F:\My_folder\Code_practice\webdev\myweb\images\work.png" height="300px" width="400px">
+                    <img src="work.png" height="300px" width="400px">
                 </div>
                 <div class="second-right">
 
@@ -100,41 +100,41 @@
                         <li>Handling pdf, csv, json files for data extraction and further processing.</li>
                         <li>Statistical Analysis (Pearson/Spearman correlation, Hypothesis testing, ANOVA)</li>
                     </ul>
-                    Check out more at my <a href="F:\My_folder\Code_practice\webdev\myweb\images\resume.pdf" target="_blank">CV</a>
+                    Check out more at my <a href="resume.pdf" target="_blank">CV</a>
                 </div>
             </div>
             <div class="third" id="third">
                 <div class="third-left">
                     <h1>SKILLS</h1>
-                    <img src="F:\My_folder\Code_practice\webdev\myweb\images\skill.svg" height="400px" width="400px">
+                    <img src="skill.svg" height="400px" width="400px">
                 </div>
                 <div class="third-right">
                     <b>Programming Languages:</b>
                     <div class="third-skill">
-                        <div><img src="F:\My_folder\Code_practice\webdev\myweb\images\python-png.png">
+                        <div><img src="python-png.png">
                             <p>Python</p>
                         </div>
-                        <div><img src="F:\My_folder\Code_practice\webdev\myweb\images\html-png.png">
+                        <div><img src="html-png.png">
                             <p>HTML</p>
                         </div>
-                        <div><img src="F:\My_folder\Code_practice\webdev\myweb\images\css-png.png">
+                        <div><img src="css-png.png">
                             <p>CSS</p>
                         </div>
-                        <div><img src="F:\My_folder\Code_practice\webdev\myweb\images\perl-png.png">
+                        <div><img src="perl-png.png">
                             <p>Perl</p>
                         </div>
                     </div>
                     <div class="third-skill">
-                        <div><img src="F:\My_folder\Code_practice\webdev\myweb\images\r-png.png">
+                        <div><img src="r-png.png">
                             <p>R-script</p>
                         </div>
-                        <div><img src="F:\My_folder\Code_practice\webdev\myweb\images\mysql-png.png">
+                        <div><img src="mysql-png.png">
                             <p>MySQL</p>
                         </div>
-                        <div><img src="F:\My_folder\Code_practice\webdev\myweb\images\js-png.png">
+                        <div><img src="js-png.png">
                             <p>Javascript</p>
                         </div>
-                        <div><img src="F:\My_folder\Code_practice\webdev\myweb\images\cli-png.png">
+                        <div><img src="cli-png.png">
                             <p>Bash</p>
                         </div>
 
@@ -153,7 +153,7 @@
             <div class="fourth" id="fourth">
                 <div class="fourth-left">
                     <h1>CONTACT AT</h1>
-                    <img src="F:\My_folder\Code_practice\webdev\myweb\images\contact.svg" height="400px" width="400px">
+                    <img src="contact.svg" height="400px" width="400px">
                 </div>
                 <div class="fourth-right">
                     Reach out to me—I'm always excited to discuss bioinformatics, AI, or simply exchange book
@@ -163,10 +163,10 @@
                     <h4>Bioinformatics Scientist</h4><br><br>
                     <div>
                         <a href="https://www.linkedin.com/in/shrushti-salunke-891791197/" target="_blank"><img
-                                src="F:\My_folder\Code_practice\webdev\myweb\images\linkedin-png.png" height="60px" width="60px"></a>
-                        <a href="shrushtisalunke910@gmail.com" target="_blank"><img src="F:\My_folder\Code_practice\webdev\myweb\images\gmail-png.png" height="60px"
+                                src="linkedin-png.png" height="60px" width="60px"></a>
+                        <a href="shrushtisalunke910@gmail.com" target="_blank"><img src="gmail-png.png" height="60px"
                                 width="60px"></a>
-                        <a href="" target="_blank"><img src="F:\My_folder\Code_practice\webdev\myweb\images\github-png.png" height="60px" width="60px"></a>
+                        <a href="" target="_blank"><img src="github-png.png" height="60px" width="60px"></a>
                     </div>
 
                 </div>
