--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
                     </div>
                     <div class="third-skill">
                         <div><img src="r-png.png">
-                            <p>R-script</p>
+                            <p>R</p>
                         </div>
                         <div><img src="mysql-png.png">
                             <p>MySQL</p>
                         </div>
                         <div><img src="js-png.png">
-                            <p>Javascript</p>
+                            <p>Jscript</p>
                         </div>
                         <div><img src="cli-png.png">
                             <p>Bash</p>
