--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <a href="shrushtisalunke910@gmail.com" target="_blank"><img
                                 src="gmail-png.png" height="60px"
                                 width="60px"></a>
-                        <a href="" target="_blank"><img
+                        <a href="https://github.com/shrush45" target="_blank"><img
                                 src="github-png.png" height="60px"
                                 width="60px"></a>
                     </div>
